src/test/deca/context/invalid/sansObj/affect-incompatible.deca
// Description:
//    Affectation d'un booléen à une variable de type int
//
// Résultat:
//right value boolean expected int
//
{
   int a;
   boolean b;
   a = b;
}
